# qdrant-pdf-viewer

./: .gitignore  .gitmodules  API.md  README.md
backend/: .env.example  Readme.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  qdrant.py
backend/app/routers/: chat.py  documents.py
backend/app/services/: embeddings.py  rag.py  storage.py  vectorstore.py
dockerQdrant/: docker-compose.yml
frontend/: tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatPanel.tsx  DragDropUploader.tsx  MarkdownContent.tsx  MessageList.tsx  PdfList.tsx  SourceChips.tsx
